push to test overflow issue

--- a/css/core-styles.css
+++ b/css/core-styles.css
@@ -5,6 +5,7 @@
 <--- -------------------------- -*/
 
 * {
+    
 	-webkit-box-sizing: border-box;
 	        box-sizing: border-box;
 }
@@ -23,6 +24,10 @@
     --secondaryDark: #760f12;
 }
 
+button:hover {
+    cursor: pointer;
+}
+
 body, html {
 	margin: 0;
 	padding: 0;
@@ -34,13 +39,13 @@ p {
 }
 
 p, a, li {
-	font-family: 'Roboto', sans-serif;
-	color: #121212;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	color: #666;
 	margin: 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: 'Montserrat', sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	margin: 0;
 }
 
@@ -75,7 +80,6 @@ h1, h2, h3, h4, h5, h6 {
     width: auto;
     min-width: 170px;
 	height: 45px;
-	font-weight: bold;
 	margin: 10px 0;
 	padding: 0 40px;
 	font-size: 1em;
@@ -87,9 +91,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .button-solid:hover {
-    color: var(--primary);
-    background: #fff;
-	border: 1px solid var(--primary);
+    background: #9a2125;
 	cursor: pointer;
 }
 
@@ -299,12 +301,13 @@ h1, h2, h3, h4, h5, h6 {
 /* Navigation Links */
 
 .mobile-wrapper img {
-    height: 40px;
+    height: 80px;
     margin: auto;
     position: absolute;
     z-index: 100;
     margin-left: 0;
     left: 0;
+    top: 7px;
 }
 
 .navbar-menu {
@@ -511,7 +514,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* Desktop */
-@media screen and (min-width: 1025px) {
+@media screen and (min-width: 1024px) {
+
+    .section {
+        padding-top: 100px !important;
+        padding-bottom: 100px !important;
+    }
 
 	/* Hidden Elements */
 	.mobile-wrapper {
@@ -532,7 +540,7 @@ h1, h2, h3, h4, h5, h6 {
 	.quote-nav-button {
         display: block;
         color: #f5f3f3;
-        background: var(--secondary);
+        background: var(--primary);
         border-radius: 25px;
         height: 40px;
         font-size: 1em;
@@ -540,17 +548,13 @@ h1, h2, h3, h4, h5, h6 {
         padding: 10px 20px;
         min-width: 100px;
     }
-    
-    .quote-nav-button:hover {
-        opacity: .7;
-    }
 
 	.navbar-menu img {
 		display: block;
 		margin: 0 !important;
 		position: absolute;
 		left: 2em;
-        height: 50px;
+        height: 98px;
         width: auto;
 	}
 
@@ -792,7 +796,9 @@ h1, h2, h3, h4, h5, h6 {
 /* mobile footer */
 
 footer {
-	background: var(--dark);
+    background: var(--dark);
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .branding h2 {
@@ -813,9 +819,9 @@ footer {
 }
 
 /* Desktop */
-@media screen and (min-width: 1025px) {
+@media screen and (min-width: 1024px) {
 
-	footer {
+	#section {
         padding-top: 20px !important;
         padding-bottom: 20px !important;
     }
